--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>SQLRepositoryAsync.Data.Repository</AssemblyName>
     <RootNamespace>SQLRepositoryAsync.Data.Repository</RootNamespace>
   </PropertyGroup>
